@@ -1,6 +1,10 @@
 devel
 -----
 
+* Fixed ES-1025: fixed a performance regression caused by different hash
+  calculation for primitive types like `uint64_t` and new the `Identifier`
+  wrapper and derived types.
+
 * APM-292: Added new AQL function SHARD_ID.
 
 * BTS-707: rename "hardened" option value for `--server.support-info-api`
